tests/ir/snapshots/integration__ir__lir__snapshot_lir_match_expression.snap
---
source: tests/ir/lir.rs
assertion_line: 81
expression: lir
---
LirProgram {
    functions: [
        LirFunction {
            name: "f",
            params: [
                LirParam {
                    label: "x",
                    name: "x",
                    typ: I64,
                },
            ],
            ret_type: I64,
            requires: Row(
                [],
                None,
            ),
            throws: Row(
                [],
                None,
            ),
            body: [
                Let {
                    name: "__t0",
                    typ: I64,
                    expr: Atom(
                        Int(
                            0,
                        ),
                    ),
                },
                Let {
                    name: "__t1",
                    typ: Bool,
                    expr: Binary {
                        op: Eq,
                        lhs: Var {
                            name: "x",
                            typ: I64,
                        },
                        rhs: Int(
                            0,
                        ),
                        typ: Bool,
                    },
                },
                If {
                    cond: Var {
                        name: "__t1",
                        typ: Bool,
                    },
                    then_body: [
                        Let {
                            name: "__t0",
                            typ: I64,
                            expr: Atom(
                                Int(
                                    10,
                                ),
                            ),
                        },
                    ],
                    else_body: [
                        Let {
                            name: "__t0",
                            typ: I64,
                            expr: Atom(
                                Int(
                                    20,
                                ),
                            ),
                        },
                    ],
                },
                Let {
                    name: "result",
                    typ: I64,
                    expr: Atom(
                        Var {
                            name: "__t0",
                            typ: I64,
                        },
                    ),
                },
            ],
            ret: Var {
                name: "result",
                typ: I64,
            },
            span: 5..154,
            source_file: None,
            source_line: None,
        },
        LirFunction {
            name: "main",
            params: [],
            ret_type: Unit,
            requires: Row(
                [],
                None,
            ),
            throws: Row(
                [],
                None,
            ),
            body: [
                Let {
                    name: "__t0",
                    typ: I64,
                    expr: Call {
                        func: "f",
                        args: [
                            (
                                "x",
                                Int(
                                    1,
                                ),
                            ),
                        ],
                        typ: I64,
                    },
                },
                Let {
                    name: "_",
                    typ: I64,
                    expr: Atom(
                        Var {
                            name: "__t0",
                            typ: I64,
                        },
                    ),
                },
            ],
            ret: Unit,
            span: 159..236,
            source_file: None,
            source_line: None,
        },
    ],
    externals: [],
}
