tests/ir/snapshots/integration__ir__lir__snapshot_lir_with_exception.snap
---
source: tests/ir/lir.rs
assertion_line: 33
expression: lir
---
LirProgram {
    functions: [
        LirFunction {
            name: "main",
            params: [],
            ret_type: Unit,
            requires: Row(
                [],
                None,
            ),
            effects: Row(
                [],
                None,
            ),
            body: [
                TryCatch {
                    body: [
                        Let {
                            name: "__t0",
                            typ: I64,
                            expr: Constructor {
                                name: "Boom",
                                args: [
                                    Int(
                                        42,
                                    ),
                                ],
                                typ: I64,
                            },
                        },
                        Let {
                            name: "__t1",
                            typ: Unit,
                            expr: Raise {
                                value: Var {
                                    name: "__t0",
                                    typ: I64,
                                },
                                typ: Unit,
                            },
                        },
                    ],
                    body_ret: None,
                    catch_param: "e",
                    catch_param_typ: String,
                    catch_body: [],
                    catch_ret: Some(
                        Unit,
                    ),
                },
            ],
            ret: Unit,
            span: 29..156,
        },
    ],
    externals: [],
}
